--- a/CV/CV.tex
+++ b/CV/CV.tex
@@ -7,6 +7,7 @@
     
 	\begin{center}
 		{\Large \textbf{Boris Resnick}\par}
+		\vspace{2mm}
 		{\large \textbf{Systems Architect in Aviation}\par}
 		E-mail: boris@resnick.ru\\
 		Cell: +7-916-1437959
