more CV visual tweak

--- a/CV/CV.tex
+++ b/CV/CV.tex
@@ -1,3 +1,4 @@
+
 \documentclass[a4paper]{article}
 
 \usepackage[top=0.75in, left=1.0in, right=1.0in, bottom=1.25in]{geometry}
@@ -52,9 +53,9 @@
     \textbf{OTHER ACTIVITIES}
 
 	\begin{itemize}
-	    \item \textbf{RTCA} - Wake Vortex Tiger Team - Contributing Member
-	    \item \textbf{EUROCAE} - WG-76 AIS/MET Datalink Applications - Chairman (2014 - 2020)
-	    \item \textbf{GUTMA} - Aerial Connectivity Joint Activity - Work Task 4 Lead (2020 - present time)
+	    \item \textbf{RTCA} -- Wake Vortex Tiger Team - Contributing Member
+	    \item \textbf{EUROCAE} -- WG-76 AIS/MET Datalink Applications - Chairman (2014 - 2020)
+	    \item \textbf{GUTMA} -- Aerial Connectivity Joint Activity - Work Task 4 Lead (2020 - present time)
 	    \item Multiple R\&D pet projects (e.g. wake vortex CNN detector)
     \end{itemize}
     \vspace{3mm}
@@ -63,7 +64,7 @@
     \vspace{3mm}
     
     Computational Mathematics and Cybernetics Dept., Moscow State University, 1999 - 2004.
-    \vspace{3mm}
+    \vspace{5mm}
     
     \textbf{SKILLS SUMMARY}
     \vspace{3mm}
