even more CV visual tweaks

--- a/CV/CV.tex
+++ b/CV/CV.tex
@@ -10,6 +10,7 @@
 		{\Large \textbf{Boris Resnick}\par}
 		\vspace{2mm}
 		{\large \textbf{Systems Architect in Aviation}\par}
+		\vspace{1mm}
 		E-mail: boris@resnick.ru\\
 		Cell: +7-916-1437959
 	\end{center}
@@ -21,18 +22,22 @@
 	\vspace{4mm}
 
 	\textbf{GLONASS Union} (Navigation and communication systems integrator) \hfill \textit{Nov 2019 - present}
+	\vspace{1mm}
 	
     Systems architect:
 	\begin{itemize}
+	    \setlength{\itemindent}{.5cm}
 	    \item Cellular-based command and control system for unmanned aviation systems
         \item Satellite-based Internet-of-Things low-power wide area network
     \end{itemize}
     \vspace{3mm}
     
-    \textbf{IANS Inc.} (Medium-sized aviation R\&D company) \hfill \textit{ Jul 2013 - Oct 2019}
+    \textbf{IANS Inc.} (Medium-sized aviation R\&D company) \hfill \textit{ Jul 2013 -- Oct 2019}
+    \vspace{1mm}
     
     Systems architect:
 	\begin{itemize}
+	    \setlength{\itemindent}{.5cm}
 	    \item Advanced mobile meteorological and hazard awareness system
 	    \item Wake Vortex Safety System
 	    \item Wide-zone aircraft tracking system
@@ -41,10 +46,12 @@
     \end{itemize}
     \vspace{3mm}
     
-    \textbf{NPPF Spectr} (Small-sized aviation systems development company) \hfill \textit{Jan 2007 - Jun 2013}
+    \textbf{NPPF Spectr} (Small-sized aviation systems development company) \hfill \textit{Jan 2007 -- Jun 2013}
+    \vspace{1mm}
     
     Software development project lead:
 	\begin{itemize}
+		\setlength{\itemindent}{.5cm}
 	    \item Real-time software for new generation DGNSS navigational equipment (GBAS station)
 	    \item Development of nation-wide distributed GNSS monitoring system
     \end{itemize}
@@ -53,9 +60,10 @@
     \textbf{OTHER ACTIVITIES}
 
 	\begin{itemize}
-	    \item \textbf{RTCA} -- Wake Vortex Tiger Team - Contributing Member
-	    \item \textbf{EUROCAE} -- WG-76 AIS/MET Datalink Applications - Chairman (2014 - 2020)
-	    \item \textbf{GUTMA} -- Aerial Connectivity Joint Activity - Work Task 4 Lead (2020 - present time)
+	    \setlength{\itemindent}{.5cm}	
+	    \item \textbf{RTCA} -- Wake Vortex Tiger Team -- Contributing Member
+	    \item \textbf{EUROCAE} -- WG-76 AIS/MET Datalink Applications -- Chairman (2014 -- 2020)
+	    \item \textbf{GUTMA} -- Aerial Connectivity Joint Activity -- Work Task 4 Lead (2020 -- present time)
 	    \item Multiple R\&D pet projects (e.g. wake vortex CNN detector)
     \end{itemize}
     \vspace{3mm}
@@ -63,7 +71,7 @@
     \textbf{EDUCATION}
     \vspace{3mm}
     
-    Computational Mathematics and Cybernetics Dept., Moscow State University, 1999 - 2004.
+    Faculty of Computational Mathematics and Cybernetics, Moscow State University, 1999 -- 2004.
     \vspace{5mm}
     
     \textbf{SKILLS SUMMARY}
