--- a/CV/CV.tex
+++ b/CV/CV.tex
@@ -9,7 +9,7 @@
 	\begin{center}
 		{\Large \textbf{Boris Resnick}\par}
 		\vspace{2mm}
-		{\large \textbf{Systems Architect in Aviation}\par}
+		{\large \textbf{Systems Architect in A\hspace{-.4mm}viation}\par}
 		\vspace{1mm}
 		E-mail: boris@resnick.ru\\
 		Cell: +7-916-1437959
@@ -21,7 +21,7 @@
 	\textbf{PROFESSIONAL EXPERIENCE}
 	\vspace{4mm}
 
-	\textbf{GLONASS Union} (Navigation and communication systems integrator) \hfill \textit{Nov 2019 - present}
+	\textbf{GLONASS Union} (Navigation and communication systems integrator) \hfill \textit{Nov 2019 -- present}
 	\vspace{1mm}
 	
     Systems architect:
@@ -53,7 +53,7 @@
 	\begin{itemize}
 		\setlength{\itemindent}{.5cm}
 	    \item Real-time software for new generation DGNSS navigational equipment (GBAS station)
-	    \item Development of nation-wide distributed GNSS monitoring system
+	    \item Nation-wide distributed GNSS monitoring system
     \end{itemize}
     \vspace{3mm}
     
@@ -77,7 +77,7 @@
     \textbf{SKILLS SUMMARY}
     \vspace{3mm}
     
-    \textbf{General}: multi-project team development and leadership, safety-critical software development, avionics and CNS/ATM systems, insight in international aviation equipment standard.
+    \textbf{General}: multi-project team development and leadership, avionics and CNS/ATM systems, safety-critical software development, insight in international aviation equipment standardisation.
     \vspace{3mm}
     
     \textbf{Software development experience}: General-purpose and embedded operating systems (Multiple ARINC-653 RTOSes, Linux, QNX, Windows), extensive list of programming languages and tools (including C/C++, C\#, Python, Julia, Matlab, Golang, Kotlin, Javascript, SysML, LabView, LaTeX), cloud architectures (AWS).
