CV: WG-105 added

--- a/CV/CV.tex
+++ b/CV/CV.tex
@@ -63,6 +63,7 @@
 	    \setlength{\itemindent}{.5cm}	
 	    \item \textbf{RTCA} -- Wake Vortex Tiger Team -- Contributing Member
 	    \item \textbf{EUROCAE} -- WG-76 AIS/MET Datalink Applications -- Chairman (2014 -- 2020)
+	    \item \textbf{EUROCAE} -- WG-105 SC-2 C3 for UAS -- Chairman (2021 -- present time)
 	    \item \textbf{GUTMA} -- Aerial Connectivity Joint Activity -- Work Task 4 Lead (2020 -- present time)
 	    \item Multiple R\&D pet projects (e.g. wake vortex CNN detector)
     \end{itemize}
