--- a/CV/CV_Resnick.tex
+++ b/CV/CV_Resnick.tex
@@ -9,10 +9,11 @@
 	\begin{center}
 		{\Large \textbf{Boris Resnick}\par}
 		\vspace{2mm}
-		{\large \textbf{Systems Architect in A\hspace{-.4mm}viation}\par}
-		\vspace{1mm}
-		E-mail: boris@resnick.ru\\
-		Cell: +7-916-1437959
+		{\large \textbf{Systems and Software Architect in A\hspace{-.4mm}viation}\par}
+		\vspace{1.5mm}
+		E-mail: boris.resnick@gmail.com \vspace{1.5mm} \\
+		Cell: +972-54-495-91-73 \quad \quad
+		Address: Netaniya, Israel
 	\end{center}
 	\vspace{-2mm}
 	\rule{\textwidth}{1pt}
@@ -21,13 +22,13 @@
 	\textbf{PROFESSIONAL EXPERIENCE}
 	\vspace{4mm}
 
-	\textbf{GLONASS Union} (Navigation and communication systems integrator) \hfill \textit{Nov 2019 -- present}
+	\textbf{Glonass Union} (Navigation and communications systems integrator) \hfill \textit{Nov 2019 -- March 2022}
 	\vspace{1mm}
 	
     Systems architect:
 	\begin{itemize}
 	    \setlength{\itemindent}{.5cm}
-	    \item Cellular-based command and control system for unmanned aviation systems
+	    \item Cellular-based UTM infrastructure for unmanned aviation systems urban BVLOS flights
     \end{itemize}
     \vspace{3mm}
     
@@ -41,7 +42,6 @@
 	    \item Wake Vortex Safety System
 	    \item Wide-zone aircraft tracking system
 	    \item Integrated modular avionics including Wake Vortex Safety Systems
-	    \item Implementation of RTCA DO-178C-compliant software development process (Level C)
     \end{itemize}
     \vspace{3mm}
     
@@ -77,10 +77,10 @@
     \textbf{SKILLS SUMMARY}
     \vspace{3mm}
     
-    \textbf{General}: multi-project team development and leadership, avionics and CNS/ATM systems, safety-critical software development, insight in international aviation equipment standardisation.
+    \textbf{General}: multi-project team development and leadership, UAS BVLOS connectivity and UTM systems, avionics and CNS/ATM systems, safety-critical software development, insight in international aviation equipment standardization.
     \vspace{3mm}
     
-    \textbf{Software development experience}: General-purpose and embedded operating systems (Multiple ARINC-653 RTOSes, Linux, QNX, Windows), extensive list of programming languages and tools (including C/C++, C\#, Python, Julia, Matlab, Golang, Kotlin, Javascript, SysML, LabView, LaTeX), cloud architectures (AWS).
+    \textbf{Software development experience}: General-purpose and embedded operating systems (Multiple ARINC-653 RTOSes, Linux, QNX, Windows), extensive list of programming languages and tools (including C/C++, C\#, Python, Julia, Matlab, Golang, Kotlin, LaTeX), cloud architectures (AWS).
     \vspace{5mm}
     
     \textbf{LANGUAGES:} English (fluent), Russian (native).
