Started at Flyvercity

--- a/CV/CV_Resnick.tex
+++ b/CV/CV_Resnick.tex
@@ -22,6 +22,16 @@
 	\textbf{PROFESSIONAL EXPERIENCE}
 	\vspace{4mm}
 
+	\textbf{Flyvercity} (Cellular-based Unmanned Traffic Services Vendor) \hfill \textit{July 2022 -- present}
+    \vspace{1mm}
+
+	Chief Technical Officer:
+	\begin{itemize}
+	    \setlength{\itemindent}{.5cm}
+	    \item Building edge-based applications for UAV Network Identification and Tactical Deconfliction
+    \end{itemize}
+    \vspace{2mm}
+
 	\textbf{Glonass Union} (Navigation and communications systems integrator) \hfill \textit{Nov 2019 -- March 2022}
 	\vspace{1mm}
 	
@@ -30,7 +40,7 @@
 	    \setlength{\itemindent}{.5cm}
 	    \item Cellular-based UTM infrastructure for unmanned aviation systems urban BVLOS flights
     \end{itemize}
-    \vspace{3mm}
+    \vspace{2mm}
     
     \textbf{IANS Inc.} (Medium-sized aviation R\&D company) \hfill \textit{ Jul 2013 -- Oct 2019}
     \vspace{1mm}
@@ -43,7 +53,7 @@
 	    \item Wide-zone aircraft tracking system
 	    \item Integrated modular avionics including Wake Vortex Safety Systems
     \end{itemize}
-    \vspace{3mm}
+    \vspace{2mm}
     
     \textbf{NPPF Spectr} (Small-sized aviation systems development company) \hfill \textit{Jan 2007 -- Jun 2013}
     \vspace{1mm}
@@ -54,7 +64,7 @@
 	    \item Real-time software for new generation DGNSS navigational equipment (GBAS station)
 	    \item Nation-wide distributed GNSS monitoring system
     \end{itemize}
-    \vspace{3mm}
+    \vspace{2mm}
     
     \textbf{OTHER ACTIVITIES}
 
@@ -69,19 +79,19 @@
     \vspace{3mm}
     
     \textbf{EDUCATION}
-    \vspace{3mm}
+    \vspace{2mm}
     
     Faculty of Computational Mathematics and Cybernetics, Moscow State University, 1999 -- 2004.
-    \vspace{5mm}
+    \vspace{4mm}
     
     \textbf{SKILLS SUMMARY}
-    \vspace{3mm}
+    \vspace{2mm}
     
     \textbf{General}: multi-project team development and leadership, UAS BVLOS connectivity and UTM systems, avionics and CNS/ATM systems, safety-critical software development, insight in international aviation equipment standardization.
-    \vspace{3mm}
+    \vspace{2mm}
     
-    \textbf{Software development experience}: General-purpose and embedded operating systems (Multiple ARINC-653 RTOSes, Linux, QNX, Windows), extensive list of programming languages and tools (including C/C++, C\#, Python, Julia, Matlab, Golang, Kotlin, LaTeX), cloud architectures (AWS).
-    \vspace{5mm}
+    \textbf{Software development experience}: General-purpose and embedded operating systems (Multiple ARINC-653 RTOSes, Linux, QNX, Windows), extensive list of programming languages and tools (including C/C++, C\#, Python, Julia, Matlab, Golang, Kotlin, Rust, LaTeX), cloud architectures (AWS).
+    \vspace{4mm}
     
     \textbf{LANGUAGES:} English (fluent), Russian (native).
 
