--- a/CV/CV_Resnick_full.tex
+++ b/CV/CV_Resnick_full.tex
@@ -54,6 +54,23 @@
 	\textbf{PROFESSIONAL EXPERIENCE}
 	\vspace{5mm}
 
+	\textbf{Flyvercity} (Cellular-based Unmanned Traffic Services Vendor) \hfill \textit{July 2022 -- present}
+
+    \vspace{2mm}
+	Chief Technical Officer\\
+
+	\project{Edge-Based Application for UAV Network Identification and Tactical Deconfliction}{
+		Technical Lead
+	}{
+		\item Design and development of the deconfliction software
+		\item Design and development of the simulation environment
+	}{
+		\item Core software: Rust
+		\item Simulation environment: Python, QGIS
+	}
+
+    \vspace{2mm}
+
 	\textbf{Glonass Union} (Navigation and communications systems integrator) \hfill \textit{Nov 2019 -- March 2022}
 
     \vspace{2mm}
@@ -144,8 +161,8 @@
 	    \setlength{\itemindent}{.5cm}	
 	    \item \textbf{RTCA} -- Wake Vortex Tiger Team -- Contributing Member
 	    \item \textbf{EUROCAE} -- WG-76 AIS/MET Datalink Applications -- Chairman (2014 -- 2020)
-	    \item \textbf{EUROCAE} -- WG-105 SC-2 C3 for UAS -- Chairman (2021 -- present time)
-	    \item \textbf{GUTMA} -- Aerial Connectivity Joint Activity -- Work Task 4 Lead (2020 -- 2021)
+	    \item \textbf{EUROCAE} -- WG-105 SC-2 C3S for UAS -- Chairman (2021 -- present time)
+	    \item \textbf{GUTMA} -- Aerial Connectivity Joint Activity -- Work Task 4 Lead (2020 -- present time)
 	    \item Multiple R\&D pet projects (e.g. wake vortex CNN detector)
     \end{itemize}
     \vspace{3mm}
@@ -172,7 +189,7 @@
     \textbf{Software development experience}: 
 	\begin{itemize}
 		\item General-purpose and embedded operating systems (Multiple ARINC-653 RTOSes, Linux, QNX, Windows)
-		\item Extensive list of programming languages and tools (including C/C++, C\#, Python, Julia, Matlab, Golang, Kotlin)
+		\item Extensive list of programming languages and tools (including C/C++, C\#, Python, Julia, Matlab, Golang, Kotlin, Rust)
 		\item Cloud architectures (AWS)
 	\end{itemize}
     \vspace{5mm}
